# Simple_avito_Django

./: .env.example  README.md  pyproject.toml
skymarket/: conftest.py  factories.py
skymarket/ads/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/ads/tests/ads/: test_ad_delete.py  test_ads_list.py  test_ads_update.py  test_create_ad.py  test_detail_ad.py
skymarket/ads/tests/comments/: test_comments_list.py  test_create_comment.py  test_delete_comment.py  test_detail_comment.py  test_update_comment.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py
skymarket/users/migrations/: 0001_initial.py
