[tool.poetry]
name = "skymarket-django"
version = "0.1.0"
description = ""
authors = ["alexeygalt <alexeygalt@gmail.com>"]
readme = "README.md"
packages = [{include = "skymarket_django"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
drf-spectacular = "^0.25.1"
django-cors-headers = "^3.13.0"
djoser = "^2.1.0"
pytest-factoryboy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
